Changelog for GoodNews

GoodNews 1.4.8-pl (2017-02-16)
--------------------------------------------------
- [#39] added subscribers export feature
- refined subscribers grid display (more details, better differentiability)
- [#6] added bulk actions to susbcribers grid
- fixed a critical bug in subscriber authentication (as a result from a merge conflict)


GoodNews 1.4.7-pl2 (2017-12-13)
--------------------------------------------------
- fixed edit icon in grid row in Settings -> Container grid


GoodNews 1.4.7-pl (2017-12-12)
--------------------------------------------------
- added edit icon to grid row in Settings -> Container grid
- [#56] fixed broken chunksPath in goodnewssubscription.class.php
- fixed some typos in lexicons
- [#57] exlude mailto links from link manipulation (_fullURLs method)
- [#54] fixed typos in sample.GoodNewsSubscriptionBoxTpl Chunk
- [#53] fixed typo in requestlinks.class.php
- [#52] fixed typo in sample.GoodNewsContentCollectionRowTpl
- [#51] fixed typos in LOG_LEVEL_WARN constant
- send mail method now also respects mail port setting from MODX system settings
- removed path and TV resolvers from setup process
- fixed a problem in Registration/Subscription process where username wasn't checked before trying to create user
- added feature to use GoodNewsUpdateProfile Snippet for logged in MODX users (not only via sid URL param)


GoodNews 1.4.6-pl (2017-03-10)
--------------------------------------------------

- fixed a problem where Subscriber placeholders in newsletter templates were URL encoded before processing
- fixed a PHP warning: Undefined variable: base
- removed permission check for „Toggle send process“
- removed grid flickering (grid mask) when auto-refresh is activated
- fixed a problem where GoodNews groups which were assigned to MODX user groups couldn't be unassigned


GoodNews 1.4.5-pl (2017-02-19)
--------------------------------------------------

- exclude blocked MODX users from recipients collection