@@ -68,6 +68,18 @@ GoodNews.panel.GeneralSettings = function(config) {
                         ,cls: 'desc-under'
                     },{
                         xtype: 'xcheckbox'
+                        ,name: 'auto_inline_css'
+                        ,id: 'auto_inline_css'
+                        ,hideLabel: true
+                        ,boxLabel: _('goodnews.settings_auto_inline_css')
+                        ,description: MODx.expandHelp ? '' : _('goodnews.settings_auto_inline_css_desc')
+                    },{
+                        xtype: MODx.expandHelp ? 'label' : 'hidden'
+                        ,forId: 'auto_inline_css'
+                        ,html: _('goodnews.settings_auto_inline_css_desc')
+                        ,cls: 'desc-under'
+                    },{
+                        xtype: 'xcheckbox'
                         ,name: 'auto_cleanup_subscriptions'
                         ,id: 'auto_cleanup_subscriptions'
                         ,hideLabel: true
