@@ -280,6 +280,8 @@ $_lang['goodnews.settings_auto_fix_imagesizes']                     = 'Automatis
 $_lang['goodnews.settings_auto_fix_imagesizes_desc']                = 'Wenn eingeschaltet, werden Bilder die mittels WYSIWYG Editor eingefügt und deren Abmessungen angepasst wurden, automatisch auf die entsprechende Größe umgerechnet.';
 $_lang['goodnews.settings_auto_full_urls']                          = 'Automatische Umwandlung von URLs in absolute URLs';
 $_lang['goodnews.settings_auto_full_urls_desc']                     = 'Wenn eingeschaltet, werden URLs im Email Body bei Bedarf automatisch auf absolute URLs umgewandelt.';
+$_lang['goodnews.settings_auto_inline_css']                         = 'Automatische Umwandlung von CSS zu inline Styes';
+$_lang['goodnews.settings_auto_inline_css_desc']                    = 'Wenn eingeschaltet, werden eingebettete CSS Regeln aus dem Header des Newsletter Templates automatisch zu inline Styles umgewandelt.';
 $_lang['goodnews.settings_auto_cleanup_subscriptions']              = 'Abonnements automatisch aufräumen';
 $_lang['goodnews.settings_auto_cleanup_subscriptions_desc']         = 'Wenn eingeschaltet, werden inaktive bzw. nicht aktivierte Abonnements inklusive zugehöriger MODX Benutzerkonten automatisch entfernt. Dies betrifft nur MODX Benutzerkonten, die mit GoodNews Metadaten verknüpft sind! MODX Benutzerkonten, welche MODX Benutzergruppen zugeordnet sind, bleiben unberührt!';
 $_lang['goodnews.settings_auto_cleanup_subscriptions_ttl']          = 'Zeitspanne für autom. Entfernen';
@@ -485,6 +487,8 @@ $_lang['setting_goodnews.auto_fix_imagesizes']                      = 'Automatis
 $_lang['setting_goodnews.auto_fix_imagesizes_desc']                 = 'Wenn eingeschaltet, werden Bilder die mittels WYSIWYG Editor eingefügt und deren Abmessungen angepasst wurden, automatisch auf die entsprechende Größe umgerechnet.';
 $_lang['setting_goodnews.auto_full_urls']                           = 'Automatische Umwandlung von URLs in absolute URLs';
 $_lang['setting_goodnews.auto_full_urls_desc']                      = 'Wenn eingeschaltet, werden URLs im Email Body bei Bedarf automatisch auf absolute URLs umgewandelt.';
+$_lang['setting_goodnews.auto_inline_css']                          = 'Automatische Umwandlung von CSS zu inline Styes';
+$_lang['setting_goodnews.auto_inline_css_desc']                     = 'Wenn eingeschaltet, werden eingebettete CSS Regeln aus dem Header des Newsletter Templates automatisch zu inline Styles umgewandelt.';
 $_lang['setting_goodnews.auto_cleanup_subscriptions']               = 'Abonnements automatisch aufräumen';
 $_lang['setting_goodnews.auto_cleanup_subscriptions_desc']          = 'Wenn eingeschaltet, werden inaktive bzw. nicht aktivierte Abonnements inklusive zugehöriger MODX Benutzerkonten automatisch entfernt. Dies betrifft nur MODX Benutzerkonten, die mit GoodNews Metadaten verknüpft sind! MODX Benutzerkonten, welche MODX Benutzergruppen zugeordnet sind, bleiben unberührt!';
 $_lang['setting_goodnews.auto_cleanup_subscriptions_ttl']           = 'Zeitspanne für autom. Entfernen';
