@@ -280,6 +280,8 @@ $_lang['goodnews.settings_auto_fix_imagesizes']                     = 'Automatic
 $_lang['goodnews.settings_auto_fix_imagesizes_desc']                = 'Whether or not images which are inserted with a WYSIWYG editor and are adjusted in its dimension, will be automatically converted to their appropriate dimension.';
 $_lang['goodnews.settings_auto_full_urls']                          = 'Automatically convert URLs to absolute URLs';
 $_lang['goodnews.settings_auto_full_urls_desc']                     = 'Whether or not URLs in email body are automatically converted to absolute URLs if necessary.';
+$_lang['goodnews.settings_auto_inline_css']                         = 'Automatically convert CSS to inline styles';
+$_lang['goodnews.settings_auto_inline_css_desc']                    = 'If enabled, embedded CSS rules from the newsletter template header are automatically converted to inline styles.';
 $_lang['goodnews.settings_auto_cleanup_subscriptions']              = 'Auto Cleanup Subscriptions';
 $_lang['goodnews.settings_auto_cleanup_subscriptions_desc']         = 'Whether or not never activated Subscriptions, including their corresponding MODX User-Accounts, will be removed automatically. This only concerns MODX User-Accounts which have GoodNews meta-data assigned! MODX User-Accounts which belongs to MODX User-Groups will stay untouched!.';
 $_lang['goodnews.settings_auto_cleanup_subscriptions_ttl']          = 'Time To Live Until Remove';
@@ -485,6 +487,8 @@ $_lang['setting_goodnews.auto_fix_imagesizes']                      = 'Automatic
 $_lang['setting_goodnews.auto_fix_imagesizes_desc']                 = 'Whether or not images which are inserted with a WYSIWYG editor and are adjusted in its dimension, will be automatically converted to their appropriate dimension.';
 $_lang['setting_goodnews.auto_full_urls']                           = 'Automatically convert URLs to absolute URLs';
 $_lang['setting_goodnews.auto_full_urls_desc']                      = 'Whether or not URLs in email body are automatically converted to absolute URLs if necessary.';
+$_lang['setting_goodnews.auto_inline_css']                          = 'Automatically convert CSS to inline styles';
+$_lang['setting_goodnews.auto_inline_css_desc']                     = 'If enabled, embedded CSS rules from the newsletter template header are automatically converted to inline styles.';
 $_lang['setting_goodnews.auto_cleanup_subscriptions']               = 'Auto Cleanup Subscriptions';
 $_lang['setting_goodnews.auto_cleanup_subscriptions_desc']          = 'Whether or not inactive or never activated Subscriptions, including their corresponding MODX User-Accounts, will be removed automatically. This only concerns MODX User-Accounts which have GoodNews meta-data assigned! MODX User-Accounts which belongs to MODX User-Groups stay untouched!.';
 $_lang['setting_goodnews.auto_cleanup_subscriptions_ttl']           = 'Time To Live Until Remove';
